@@ -65,6 +65,8 @@ dnl structures
 
 NIH_CHECK_STRUCT([#include <sys/types.h>
 #include <sys/socket.h>], sockaddr_storage)
+NIH_CHECK_STRUCT_MEMBER([#include <sys/types.h>
+#include <sys/socket.h>], sockaddr, sa_len)
 
 dnl compiler characteristics
 
